addons/calico/tests/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-frontend
  labels:
    environment: test
    tier: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-backend
  labels:
    environment: test
    tier: backend
